--- a/Plugin/UnityProjectPlugin/Views/ProjectCard.axaml
+++ b/Plugin/UnityProjectPlugin/Views/ProjectCard.axaml
@@ -125,7 +125,7 @@
 													<ItemsControl.ItemTemplate>
 														<DataTemplate>
 															<Grid ColumnDefinitions="*,Auto" Margin="0,4">
-																<TextBlock Grid.Column="0" 
+																<TextBlock Grid.Column="0"
 																		   Text="{Binding Name}"
 																		   VerticalAlignment="Center"/>
 																<Button Grid.Column="1"
@@ -162,8 +162,8 @@
 							</Button.Flyout>
 							<StackPanel Orientation="Horizontal" Spacing="4">
 								<ui:SymbolIcon Symbol="Tag" FontSize="12"/>
-								<TextBlock Name="GroupButtonText" 
-										   Text="未分组" 
+								<TextBlock Name="GroupButtonText"
+										   Text="未分组"
 										   FontSize="11"
 										   VerticalAlignment="Center"/>
 							</StackPanel>
@@ -171,15 +171,15 @@
 					</Grid>
 				</StackPanel>
 
-			<!-- 项目路径 -->
-			<TextBlock Text="{Binding Path}"
-					   Name="ProjectPathText"
-					   Classes="clickable-path"
-					   FontSize="12"
-					   Opacity="0.6"
-					   TextTrimming="CharacterEllipsis"
-					   Cursor="Hand"
-					   ToolTip.Tip="点击打开目录"/>
+				<!-- 项目路径 -->
+				<TextBlock Text="{Binding Path}"
+						   Name="ProjectPathText"
+						   Classes="clickable-path"
+						   FontSize="12"
+						   Opacity="0.6"
+						   TextTrimming="CharacterEllipsis"
+						   Cursor="Hand"
+						   ToolTip.Tip="点击打开目录"/>
 			</StackPanel>
 
 			<!-- 操作按钮 -->
@@ -191,22 +191,20 @@
 						 VerticalAlignment="Center"
 						 Padding="16,8"
 						 Margin="16,0,0,0">
-			<SplitButton.Flyout>
-				<MenuFlyout>
-					<MenuItem Header="打开目录" Name="OpenDirectoryMenuItem">
-						<MenuItem.Icon>
-							<ui:SymbolIcon Symbol="Folder"/>
-						</MenuItem.Icon>
-					</MenuItem>
-					<MenuItem Header="删除" Name="DeleteMenuItem"
-							  Command="{Binding DataContext.DeleteProjectCommand, RelativeSource={RelativeSource AncestorType={x:Type views:UnityProjectTabView}}}"
-							  CommandParameter="{Binding}">
-						<MenuItem.Icon>
-							<ui:SymbolIcon Symbol="Delete"/>
-						</MenuItem.Icon>
-					</MenuItem>
-				</MenuFlyout>
-			</SplitButton.Flyout>
+				<SplitButton.Flyout>
+					<MenuFlyout>
+						<MenuItem Header="打开目录" Name="OpenDirectoryMenuItem">
+							<MenuItem.Icon>
+								<ui:SymbolIcon Symbol="Folder"/>
+							</MenuItem.Icon>
+						</MenuItem>
+						<MenuItem Header="删除" Name="DeleteMenuItem">
+							<MenuItem.Icon>
+								<ui:SymbolIcon Symbol="Delete"/>
+							</MenuItem.Icon>
+						</MenuItem>
+					</MenuFlyout>
+				</SplitButton.Flyout>
 			</SplitButton>
 
 			<!-- 标签和元数据 -->
