--- a/MicroDock/Views/Tabs/SettingsTabView.axaml
+++ b/MicroDock/Views/Tabs/SettingsTabView.axaml
@@ -139,17 +139,10 @@
 										</fa:InfoBadge>
 
 										<!-- 密码设置按钮 -->
-										<StackPanel Grid.Column="3" Orientation="Horizontal" Spacing="4" VerticalAlignment="Center">
-											<Button Content="{Binding PasswordButtonText}"
-													Command="{Binding SetPasswordCommand}"
-													Padding="8,4"
-													FontSize="12"/>
-											<Button Content="移除"
-													Command="{Binding RemovePasswordCommand}"
-													IsVisible="{Binding IsLocked}"
-													Padding="8,4"
-													FontSize="12"/>
-										</StackPanel>
+										<Button Grid.Column="3" Content="{Binding PasswordButtonText}"
+												Command="{Binding SetPasswordCommand}"
+												Padding="8,4"
+												FontSize="12"/>
 									</Grid>
 								</Border>
 							</DataTemplate>
